--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <!--S: Swiper CDN-->
     <link
             rel="stylesheet"
@@ -209,7 +209,7 @@
                            src="https://cdn.englishegg.com/eggstar/eggstar_02_01_mid.mp4"></video>
                     <div class="dimmed"></div>
                 </div>
-                <i class="ico_arrow"><img src="../../images/icon/ico_hero_arrow.png" alt="scroll"><em class="blind">Scroll</em></i>
+                <i class="ico_arrow"><img src="./images/icon/ico_hero_arrow.png" alt="scroll"><em class="blind">Scroll</em></i>
             </section>
 
         </div>
@@ -232,7 +232,7 @@
                         <li class="content_list kinder">
                             <div class="auto_slide d_flex">
                                 <div class="content_block">
-                                    <span class="content_item link"><a href="/product/kinder"><em class="title">미국<br /> 유치원</em><img src="../../images/main/book/k/bg_content_title.png" alt="미국 유치원 바로가기"></a></span>
+                                    <span class="content_item link"><a href="/product/kinder"><em class="title">미국<br /> 유치원</em><img src="./images/main/book/k/bg_content_title.png" alt="미국 유치원 바로가기"></a></span>
                                     <span class="content_item"><img src="./images/main/book/k/content_01.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/k/content_02.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/k/content_03.png" alt=""></span>
@@ -250,7 +250,7 @@
                                     <span class="content_item"><img src="./images/main/book/k/content_15.png" alt=""></span>
                                 </div>
                                 <div class="content_block">
-                                    <span class="content_item link"><a href="/product/kinder"><em class="title">미국<br /> 유치원</em><img src="../../images/main/book/k/bg_content_title.png" alt="미국 유치원 바로가기"></a></span>
+                                    <span class="content_item link"><a href="/product/kinder"><em class="title">미국<br /> 유치원</em><img src="./images/main/book/k/bg_content_title.png" alt="미국 유치원 바로가기"></a></span>
                                     <span class="content_item"><img src="./images/main/book/k/content_01.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/k/content_02.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/k/content_03.png" alt=""></span>
@@ -273,7 +273,7 @@
                         <li class="content_list element">
                             <div class="auto_slide d_flex">
                                 <div class="content_block">
-                                    <span class="content_item link"><a href="/product/element"><em class="title">미국<br /> 초등학교</em><img src="../../images/main/book/e/bg_content_title.png" alt="미국 초등 바로가기"></a></span>
+                                    <span class="content_item link"><a href="/product/element"><em class="title">미국<br /> 초등학교</em><img src="./images/main/book/e/bg_content_title.png" alt="미국 초등 바로가기"></a></span>
                                     <span class="content_item"><img src="./images/main/book/e/content_01.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/e/content_02.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/e/content_03.png" alt=""></span>
@@ -291,7 +291,7 @@
                                     <span class="content_item"><img src="./images/main/book/e/content_15.png" alt=""></span>
                                 </div>
                                 <div class="content_block">
-                                    <span class="content_item link"><a href="/product/element"><em class="title">미국<br /> 초등학교</em><img src="../../images/main/book/e/bg_content_title.png" alt="미국 초등 바로가기"></a></span>
+                                    <span class="content_item link"><a href="/product/element"><em class="title">미국<br /> 초등학교</em><img src="./images/main/book/e/bg_content_title.png" alt="미국 초등 바로가기"></a></span>
                                     <span class="content_item"><img src="./images/main/book/e/content_01.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/e/content_02.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/e/content_03.png" alt=""></span>
@@ -314,7 +314,7 @@
                         <li class="content_list library">
                             <div class="auto_slide d_flex">
                                 <div class="content_block">
-                                    <span class="content_item link"><a href="/product/library"><em class="title">미국<br /> 도서관</em><img src="../../images/main/book/l/bg_content_title.png" alt="미국 도서관 바로가기"></a></span>
+                                    <span class="content_item link"><a href="/product/library"><em class="title">미국<br /> 도서관</em><img src="./images/main/book/l/bg_content_title.png" alt="미국 도서관 바로가기"></a></span>
                                     <span class="content_item"><img src="./images/main/book/l/content_01.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/l/content_02.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/l/content_03.png" alt=""></span>
@@ -332,7 +332,7 @@
                                     <span class="content_item"><img src="./images/main/book/l/content_15.png" alt=""></span>
                                 </div>
                                 <div class="content_block">
-                                    <span class="content_item link"><a href="/product/library"><em class="title">미국<br /> 도서관</em><img src="../../images/main/book/l/bg_content_title.png" alt="미국 도서관 바로가기"></a></span>
+                                    <span class="content_item link"><a href="/product/library"><em class="title">미국<br /> 도서관</em><img src="./images/main/book/l/bg_content_title.png" alt="미국 도서관 바로가기"></a></span>
                                     <span class="content_item"><img src="./images/main/book/l/content_01.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/l/content_02.png" alt=""></span>
                                     <span class="content_item"><img src="./images/main/book/l/content_03.png" alt=""></span>
@@ -356,7 +356,7 @@
                         <!--S:유치원-->
                         <li class="content_list kinder swiper" id="contentKinder" dir="ltr">
                             <div class="content_block swiper-wrapper">
-                                <span class="swiper-slide content_item"><a href="/product/kinder"><img src="../../images/main/book/k/content_title.png" alt="미국 유치원 바로가기"></a></span>
+                                <span class="swiper-slide content_item"><a href="/product/kinder"><img src="./images/main/book/k/content_title.png" alt="미국 유치원 바로가기"></a></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/k/content_01.png" alt=""></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/k/content_02.png" alt=""></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/k/content_03.png" alt=""></span>
@@ -377,7 +377,7 @@
                         <!--S:초등-->
                         <li class="content_list element swiper" id="contentElement" dir="rtl">
                             <div class="auto_slide content_block swiper-wrapper">
-                                <span class="swiper-slide content_item"><a href="/product/element"><img src="../../images/main/book/e/content_title.png" alt="미국 초등 바로가기"></a></span>
+                                <span class="swiper-slide content_item"><a href="/product/element"><img src="./images/main/book/e/content_title.png" alt="미국 초등 바로가기"></a></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/e/content_01.png" alt=""></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/e/content_02.png" alt=""></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/e/content_03.png" alt=""></span>
@@ -398,7 +398,7 @@
                         <!--S:도서관-->
                         <li class="content_list library swiper" id="contentLibrary" dir="ltr">
                             <div class="auto_slide swiper-wrapper">
-                                <span class="swiper-slide content_item"><a href="/product/library"><img src="../../images/main/book/l/content_title.png" alt="미국 도서관 바로가기"></a></span>
+                                <span class="swiper-slide content_item"><a href="/product/library"><img src="./images/main/book/l/content_title.png" alt="미국 도서관 바로가기"></a></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/l/content_01.png" alt=""></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/l/content_02.png" alt=""></span>
                                 <span class="swiper-slide content_item"><img src="./images/main/book/l/content_03.png" alt=""></span>
