--- a/product/element.html
+++ b/product/element.html
@@ -90,7 +90,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header">
-        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -106,7 +106,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src=".../../images/logo.png" alt="Egg School">
+                <img class="logo" src="../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="../../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -189,7 +189,7 @@
                     영미권 문화와 교과 표현을<br class="m_br" /> 쉽고 재미있게 익혀보세요.
                 </h3>
                 <div class="product_thumb_box" data-aos="fade-up">
-                    <img src="../../images/product/img_product_element.png" alt="">
+                    <img src="./../images/product/img_product_element.png" alt="">
                     <div class="font_right">
                         <button class="btn_detail" onclick="showModal('#productDetailModal')"><i class="ico_search"></i> 제품 구성 상세 안내</button>
                     </div>
@@ -248,14 +248,14 @@
             <div class="container">
                 <ul class="feature_box_block" data-aos="fade-up">
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_english.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_english.png" alt="">
                         <p class="desc">
                             책과 영상을 통해 직접<br />
                             <span class="font_point">Speaking 연습까지</span>
                         </p>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_selfStudy.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_selfStudy.png" alt="">
                         <p class="desc">
                             <span class="font_point">디지털 학습</span> 콘텐츠로<br />
                             재미있게 셀프스터디
