--- a/product/library.html
+++ b/product/library.html
@@ -90,7 +90,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header">
-        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -106,7 +106,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src=".../../images/logo.png" alt="Egg School">
+                <img class="logo" src="../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="../../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -190,7 +190,7 @@
                     <strong class="font_point">살아있는<br class="m_br" /> 이야기와 노래</strong>로 즐겨보세요!
                 </h3>
                 <div class="product_thumb_box" data-aos="fade-up">
-                    <img src="../../images/product/img_product_library.png" alt="">
+                    <img src="./../images/product/img_product_library.png" alt="">
                     <div class="font_right">
                         <button class="btn_detail" onclick="showModal('#productDetailModal')"><i class="ico_search"></i> 제품 구성 상세 안내</button>
                     </div>
@@ -234,26 +234,26 @@
                 <ul class="feature_box_block" data-aos="fade-up">
                     <li class="title">
                         <picture>
-                            <source srcset="../../images/product/library/m_img_ftts_logo.png" media="(max-width: 768px)" />
-                            <img src="../../images/product/library/img_ftts_logo.png" alt="Fairy Tales That Sing" />
+                            <source srcset="./../images/product/library/m_img_ftts_logo.png" media="(max-width: 768px)" />
+                            <img src="./../images/product/library/img_ftts_logo.png" alt="Fairy Tales That Sing" />
                         </picture>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_planner.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_planner.png" alt="">
                         <p class="desc">
                             <span class="font_point">브로드웨이 원어민<br />
                             작곡가</span>가 만든 노래
                         </p>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_music.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_music.png" alt="">
                         <p class="desc">
                             영어 특징을<br />
                             완벽하게 살린 <span class="font_point">라임</span>
                         </p>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_book.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_book.png" alt="">
                         <p class="desc">
                             대화만으로 <span class="font_point">완성도<br />
                             높은 이야기</span> 구현
@@ -277,7 +277,7 @@
                         </p>
                     </div>
                     <div class="thumb_block" data-aos="fade-up">
-                        <img src="../../images/product/library/img_step01.png" alt="">
+                        <img src="./../images/product/library/img_step01.png" alt="">
                     </div>
                 </div>
             </article>
@@ -300,7 +300,7 @@
                         <h5 class="title_round">음원 구성</h5>
                         <div class="song_block" data-aos="fade-up">
                             <div class="img_thumb_box">
-                                <img src="../../images/product/library/ft_detail_04_01.png" alt="">
+                                <img src="./../images/product/library/ft_detail_04_01.png" alt="">
                             </div>
                             <div class="song_desc">
                                 <h6 class="title">Drama</h6>
@@ -319,12 +319,12 @@
                                 </p>
                             </div>
                             <div class="img_thumb_box">
-                                <img src="../../images/product/library/ft_detail_04_02.png" alt="">
+                                <img src="./../images/product/library/ft_detail_04_02.png" alt="">
                             </div>
                         </div>
                         <div class="song_block" data-aos="fade-up">
                             <div class="img_thumb_box">
-                                <img src="../../images/product/library/ft_detail_04_03.png" alt="">
+                                <img src="./../images/product/library/ft_detail_04_03.png" alt="">
                             </div>
                             <div class="song_desc">
                                 <h6 class="title">Sing Along</h6>
@@ -354,7 +354,7 @@
                     </div>
                     <div data-aos="fade-up">
                         <div class="video_player">
-                            <img src="../../images/product/library/img_step03.gif" alt="">
+                            <img src="./../images/product/library/img_step03.gif" alt="">
                         </div>
                     </div>
                 </div>
@@ -375,7 +375,7 @@
                         <ul class="swiper-wrapper">
                             <li class="swiper-slide preview_box">
                                 <div class="thumb_block">
-                                    <img src="../../images/product/library/img_preview_01.png" alt="">
+                                    <img src="./../images/product/library/img_preview_01.png" alt="">
                                 </div>
                                 <div class="info_block">
                                     <p class="title">Stone Soup</p>
@@ -387,7 +387,7 @@
                             </li>
                             <li class="swiper-slide preview_box">
                                 <div class="thumb_block">
-                                    <img src="../../images/product/library/img_preview_02.png" alt="">
+                                    <img src="./../images/product/library/img_preview_02.png" alt="">
                                 </div>
                                 <div class="info_block">
                                     <p class="title">The Bear and the Two Travelers</p>
@@ -400,7 +400,7 @@
                             </li>
                             <li class="swiper-slide preview_box">
                                 <div class="thumb_block">
-                                    <img src="../../images/product/library/img_preview_03.png" alt="">
+                                    <img src="./../images/product/library/img_preview_03.png" alt="">
                                 </div>
                                 <div class="info_block">
                                     <p class="title">The Three Little Pigs</p>
@@ -435,13 +435,13 @@
                 </div>
                 <div class="thumb_block" data-aos="fade-left">
                     <picture>
-                        <source srcset="../../images/product/m_img_pen_person.png" media="(max-width: 768px)">
-                        <img src="../../images/product/img_pen_person.png"  loading="lazy" alt="" >
+                        <source srcset="./../images/product/m_img_pen_person.png" media="(max-width: 768px)">
+                        <img src="./../images/product/img_pen_person.png"  loading="lazy" alt="" >
                     </picture>
                 </div>
             </div>
-            <div class="bg_pen_01"><img src="../../images/product/bg_pen_01.png" alt="" loading="lazy"></div>
-            <div class="bg_pen_02"><img src="../../images/product/bg_pen_02.png" alt="" loading="lazy"></div>
+            <div class="bg_pen_01"><img src="./../images/product/bg_pen_01.png" alt="" loading="lazy"></div>
+            <div class="bg_pen_02"><img src="./../images/product/bg_pen_02.png" alt="" loading="lazy"></div>
         </section>
         <!--E:에그스쿨펜-->
     </main>
@@ -466,7 +466,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="../../images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="./../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
@@ -510,7 +510,7 @@
                         </ul>
                     </div>
                     <ul class="sns_link_block">
-                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="../../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
+                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="./../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
                         <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="../../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
                         <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="../../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
                     </ul>
