--- a/product/freetrial/element.html
+++ b/product/freetrial/element.html
@@ -218,7 +218,7 @@
                                     </p>
                                 </li>
                                 <li class="inner_box">
-                                    <img class="img_video" src="../../images/product/freetrial/element/img_component_ani_03.png" loading="lazy" alt="">
+                                    <img class="img_video" src="./../images/product/freetrial/element/img_component_ani_03.png" loading="lazy" alt="">
                                     <p class="dot_desc">
                                         E-Book
                                     </p>
@@ -239,21 +239,21 @@
                             </p>
                             <ul class="list_block">
                                 <li class="inner_box">
-                                    <img class="img_video" src="../../images/product/freetrial/element/img_component_sitcom_01.png" loading="lazy" alt="">
+                                    <img class="img_video" src="./../images/product/freetrial/element/img_component_sitcom_01.png" loading="lazy" alt="">
                                     <p class="dot_desc">
                                         영상 6편 <br />
                                         & 오디오 4곡
                                     </p>
                                 </li>
                                 <li class="inner_box">
-                                    <img class="img_video" src="../../images/product/freetrial/element/img_component_sitcom_02.png" loading="lazy" alt="">
+                                    <img class="img_video" src="./../images/product/freetrial/element/img_component_sitcom_02.png" loading="lazy" alt="">
                                     <p class="dot_desc">
                                         디지털콘텐츠<br />
                                         14일 이용권
                                     </p>
                                 </li>
                                 <li class="inner_box">
-                                    <img class="img_video" src="../../images/product/freetrial/element/img_component_sitcom_03.png" loading="lazy" alt="">
+                                    <img class="img_video" src="./../images/product/freetrial/element/img_component_sitcom_03.png" loading="lazy" alt="">
                                     <p class="dot_desc">
                                         E-Book
                                     </p>
@@ -277,7 +277,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="../../images/product/freetrial/element/img_step_01.png" alt="">
+                                    <img src="./../images/product/freetrial/element/img_step_01.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -293,7 +293,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="../../images/product/freetrial/element/img_step_02.png" alt="">
+                                    <img src="./../images/product/freetrial/element/img_step_02.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -309,7 +309,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="../../images/product/freetrial/element/img_step_03.png" alt="">
+                                    <img src="./../images/product/freetrial/element/img_step_03.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -342,14 +342,14 @@
                     <ul class="list_block">
                         <li class="process_box" data-aos="fade-up">
                             <div class="thumb_block">
-                                <img src="../../images/product/img_freetrial_element.png" alt="">
+                                <img src="./../images/product/img_freetrial_element.png" alt="">
                             </div>
                             <h6 class="title">무료 체험 신청</h6>
                         </li>
                         <li><i class="ico_arrow process"></i></li>
                         <li class="process_box" data-aos="fade-up" data-aos-delay="200">
                             <div class="thumb_block">
-                                <img src="../../images/product/img_freetrial_alarmTalk.png" alt="">
+                                <img src="./../images/product/img_freetrial_alarmTalk.png" alt="">
                             </div>
                             <h6 class="title">알림톡 발송</h6>
                             <p class="desc">* 앱 설치 후 영상부터 즐겨보세요.</p>
@@ -358,7 +358,7 @@
                         <li><i class="ico_arrow process"></i></li>
                         <li class="process_box" data-aos="fade-up" data-aos-delay="300">
                             <div class="thumb_block">
-                                <img src="../../images/product/img_freetrial_content.png" alt="">
+                                <img src="./../images/product/img_freetrial_content.png" alt="">
                             </div>
                             <h6 class="title">콘텐츠 체험</h6>
                         </li>
@@ -538,7 +538,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="../../images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="./../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
