--- a/product/freetrial/kinder.html
+++ b/product/freetrial/kinder.html
@@ -246,7 +246,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="../../images/product/freetrial/kinder/img_step_01.png" alt="">
+                                    <img src="./../images/product/freetrial/kinder/img_step_01.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -262,7 +262,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="../../images/product/freetrial/kinder/img_step_02.png" alt="">
+                                    <img src="./../images/product/freetrial/kinder/img_step_02.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -280,7 +280,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="../../images/product/freetrial/kinder/img_step_03.png" alt="">
+                                    <img src="./../images/product/freetrial/kinder/img_step_03.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -313,14 +313,14 @@
                     <ul class="list_block">
                         <li class="process_box" data-aos="fade-up">
                             <div class="thumb_block">
-                                <img src="../../images/product/img_freetrial_kinder.png" alt="">
+                                <img src="./../images/product/img_freetrial_kinder.png" alt="">
                             </div>
                             <h6 class="title">무료 체험 신청</h6>
                         </li>
                         <li><i class="ico_arrow process"></i></li>
                         <li class="process_box" data-aos="fade-up" data-aos-delay="200">
                             <div class="thumb_block">
-                                <img src="../../images/product/img_freetrial_delivery.png" alt="">
+                                <img src="./../images/product/img_freetrial_delivery.png" alt="">
                             </div>
                             <h6 class="title">무료 배송</h6>
                             <p class="desc">* 앱 설치 후 영상부터 즐겨보세요.</p>
@@ -329,7 +329,7 @@
                         <li><i class="ico_arrow process"></i></li>
                         <li class="process_box" data-aos="fade-up" data-aos-delay="300">
                             <div class="thumb_block">
-                                <img src="../../images/product/img_freetrial_content.png" alt="">
+                                <img src="./../images/product/img_freetrial_content.png" alt="">
                             </div>
                             <h6 class="title">콘텐츠 체험</h6>
                         </li>
