--- a/product/kinder.html
+++ b/product/kinder.html
@@ -89,7 +89,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header">
-        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -105,7 +105,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src=".../../images/logo.png" alt="Egg School">
+                <img class="logo" src="../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="../../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -188,7 +188,7 @@
                     놀면서 언어와 문화를 배우는<br class="m_br" /> <strong class="font_point">미국 유치원</strong>입니다.
                 </h3>
                 <div class="product_thumb_box" data-aos="fade-up">
-                    <img src="../../images/product/img_product_kinder.png" alt="">
+                    <img src="./../images/product/img_product_kinder.png" alt="">
                     <div class="font_right">
                         <button class="btn_detail" onclick="showModal('#productDetailModal')"><i class="ico_search"></i> 제품 구성 상세 안내</button>
                     </div>
@@ -231,42 +231,42 @@
             <div class="container">
                 <ul class="feature_box_block" data-aos="fade-up">
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_money.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_money.png" alt="">
                         <p class="desc">
                             <span class="font_point">월 5만원대</span>로 <br />
                             누리는 영어 유치원
                         </p>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_delivery.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_delivery.png" alt="">
                         <p class="desc">
                             매월 집으로 <br />
                             <span class="font_point">무료배송</span>
                         </p>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_curriculum.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_curriculum.png" alt="">
                         <p class="desc">
                             <span class="font_point">미국</span> 교육열 <span class="font_point">10개주</span> <br />
                             교육정책 기반 커리큘럼
                         </p>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_bulb.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_bulb.png" alt="">
                         <p class="desc">
                             한가지 주제로 연계되는 <br />
                             에피소드로 <span class="font_point">사고력 확장</span>
                         </p>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_music.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_music.png" alt="">
                         <p class="desc">
                             <span class="font_point">영상과 음원</span>으로 만나는 <br />
                             미국 유치원
                         </p>
                     </li>
                     <li class="feature_box">
-                        <img class="ico_feature" src="../../images/product/ico_feature_timer.png" alt="">
+                        <img class="ico_feature" src="./../images/product/ico_feature_timer.png" alt="">
                         <p class="desc">
                             하루 30분만으로 <br />
                             <span class="font_point">집에서</span> 충분한 <span class="font_point">영어노출</span>
@@ -293,7 +293,7 @@
                         <li class="content_box" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="../../images/product/kinder/img_step01_01.png" alt="">
+                                    <img src="./../images/product/kinder/img_step01_01.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -310,7 +310,7 @@
                         <li class="content_box" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="../../images/product/kinder/img_step01_02.png" alt="">
+                                    <img src="./../images/product/kinder/img_step01_02.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -354,7 +354,7 @@
                             <div class="container">
                                 <div class="video_player">
                                     <i class="ico_play"></i>
-                                    <img class="thumbnail" src="../../images/product/kinder/img_video_thumbnail_01.png" alt="">
+                                    <img class="thumbnail" src="./../images/product/kinder/img_video_thumbnail_01.png" alt="">
                                     <video playsinline
                                            controls
                                            controlsList = "nodownload"
@@ -372,7 +372,7 @@
                             <div class="container">
                                 <div class="video_player">
                                     <i class="ico_play"></i>
-                                    <img class="thumbnail" src="../../images/product/kinder/img_video_thumbnail_02.png" alt="">
+                                    <img class="thumbnail" src="./../images/product/kinder/img_video_thumbnail_02.png" alt="">
                                     <video playsinline
                                            controls
                                            controlsList = "nodownload"
@@ -390,7 +390,7 @@
                             <div class="container">
                                 <div class="video_player">
                                     <i class="ico_play"></i>
-                                    <img class="thumbnail" src="../../images/product/kinder/img_video_thumbnail_03.png" alt="">
+                                    <img class="thumbnail" src="./../images/product/kinder/img_video_thumbnail_03.png" alt="">
                                     <video playsinline
                                            controls
                                            controlsList = "nodownload"
@@ -423,7 +423,7 @@
                         </p>
                     </div>
                     <div class="thumb_block" data-aos="fade-up">
-                        <img src="../../images/product/kinder/img_step03.png" alt="">
+                        <img src="./../images/product/kinder/img_step03.png" alt="">
                     </div>
                     <div class="swiper storybook_list_wrapper" id="storybookSwiper" data-aos="fade-up">
                         <ul class="swiper-wrapper storybook_list_block">
@@ -476,7 +476,7 @@
                         </div>
                         <div class="product_program_wrapper" data-aos="fade-up">
                             <div class="thumb_block">
-                                <img src="../../images/product/kinder/prek/img_program_01.png" alt="Play It Again, Sammy">
+                                <img src="./../images/product/kinder/prek/img_program_01.png" alt="Play It Again, Sammy">
                             </div>
                             <div class="info_block">
                                 <dl class="info_box">
@@ -521,7 +521,7 @@
                             <ul class="swiper-wrapper">
                                 <li class="swiper-slide monthly_box">
                                     <div class="thumb_block">
-                                        <img src="../../images/product/kinder/prek/preknewyear_01.png" alt="">
+                                        <img src="./../images/product/kinder/prek/preknewyear_01.png" alt="">
                                     </div>
                                     <div class="info_block">
                                         <div class="title">
