--- a/studyroom/guide/element.html
+++ b/studyroom/guide/element.html
@@ -89,7 +89,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header">
-        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -105,7 +105,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src=".../../images/logo.png" alt="Egg School">
+                <img class="logo" src="../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="../../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -175,7 +175,7 @@
         <section class="guide_wrapper">
             <article class="cover_block">
                 <div class="thumb_block">
-                    <img src="../../images/guide/element/img_top_guide_green.png" alt="">
+                    <img src="./../images/guide/element/img_top_guide_green.png" alt="">
                 </div>
                 <div class="inner">
                     <h4 class="greeting" data-aos="fade-up">
@@ -187,7 +187,7 @@
                         초등 학습 가이드북
                     </h2>
                     <div class="thumb_block img_cover" data-aos="fade-up">
-                        <img src="../../images/guide/element/char_guide_element.png" alt="">
+                        <img src="./../images/guide/element/char_guide_element.png" alt="">
                     </div>
                 </div>
             </article>
@@ -202,7 +202,7 @@
                     <em class="font_point">책장 한 켠을 비워주세요.</em>
                 </p>
                 <div class="thumb_block img_package w_100" data-aos="fade-up">
-                    <img src="../../images/guide/element/img_guide_package.png" alt="">
+                    <img src="./../images/guide/element/img_guide_package.png" alt="">
                 </div>
             </article>
             <!--S:교재 받은 후-->
@@ -215,7 +215,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/img_eggschool_app.png" alt="">
+                            <img src="./../images/guide/img_eggschool_app.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -227,12 +227,12 @@
                             <ul class="app_link_block">
                                 <li>
                                     <button onclick="redirectToAppStore('android')">
-                                        <img src="../../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
+                                        <img src="./../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
                                     </button>
                                 </li>
                                 <li>
                                     <button onclick="redirectToAppStore('ios')">
-                                        <img src="../../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
+                                        <img src="./../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
                                     </button>
                                 </li>
                             </ul>
@@ -241,7 +241,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/img_app_login.png" alt="">
+                            <img src="./../images/guide/img_app_login.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -254,7 +254,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/element/img_app_main.png" alt="">
+                            <img src="./../images/guide/element/img_app_main.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -276,7 +276,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/element/img_step02_01.png" alt="">
+                            <img src="./../images/guide/element/img_step02_01.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -289,7 +289,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/element/img_step02_02.png" alt="">
+                            <img src="./../images/guide/element/img_step02_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -301,7 +301,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/element/img_step02_03.png" alt="">
+                            <img src="./../images/guide/element/img_step02_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -326,7 +326,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/element/img_step03_01.png" alt="">
+                            <img src="./../images/guide/element/img_step03_01.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -341,7 +341,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/element/img_step03_02.png" alt="">
+                            <img src="./../images/guide/element/img_step03_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -358,7 +358,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/element/img_step03_03.png" alt="">
+                            <img src="./../images/guide/element/img_step03_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
